# python-project-lvl1

./: .travis.yml  Makefile  README.md  pyproject.toml
GitTest/: README.md
brain_games/: cli.py  functions.py
brain_games/games/: brain-even.py  brain_calc.py  brain_even.py  brain_gcd  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
takiradevelop_brain_games.egg-info/: PKG-INFO  SOURCES.txt
