[tool.poetry]
name = "TakiraDevelop_brain_games"
version = "0.1.0"
description = ""
authors = ["Viktoriya <uvp11@mail.ru>"]
packages = [
	{include = "brain_games"},
]

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"
flake8 = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
